Adicionando cadastro de pedidos manuais